<?xml version="1.0" encoding="utf-8"?><!--Generated by crowdin.com-->
<resources>
  <string name="app_name">personalDNSfilter</string>
  <string name="listenPortLabel">Port:</string>
  <string name="startBtnLabel">Restart</string>
  <string name="stopBtnLabel">Close</string>
  <string name="filterReloadBtnLabel">Reload filter</string>
  <string name="EnableConfigCheckBox">Advanced settings</string>
  <string name="editFilterLoadCheckBox">Configure filter update</string>
  <string name="editAdditionalHostsCheckBox">Configure additional hosts</string>
  <string name="appWhitelistCheckBox">App whitelist</string>
  <string name="keepAwakeCheckBox">Prevent device sleep</string>
  <string name="EnableAutoStart">Autostart</string>
  <string name="EnableAdfilter">Enable blocking</string>
  <string name="dnsLabel">DNS:</string>
  <string name="manualDNSCheck">Disable DNS server discovery - manual DNS servers below:</string>
  <string name="dnsCfgConfigDialogTitle">DNS server configuration</string>
  <string name="filterUpdateDays">Filter update interval in days:</string>
  <string name="active">Active</string>
  <string name="shortText">Short text</string>
  <string name="cfgBackupRestore">Backup and restore</string>
  <string name="backupConfig">Backup configuration</string>
  <string name="restoreBackup">Restore backup</string>
  <string name="restoreDefault">Restore default configuration</string>
  <string name="cnameCloakingConfig">CNAME cloaking protection (aggressive)</string>
  <string name="category">Category</string>
  <string name="name">Name</string>
  <string name="editFilterDialogTitle">Edit filter</string>
  <string name="addFilter">"Add filter"</string>
  <string name="removeFilter">"Remove filter"</string>
  <string name="proxyModeCheckBox">DNS proxy mode without local VPN</string>
  <string name="rootModeCheckBox">Root mode without local VPN</string>
  <string name="proxyLocalOnlyCheckbox">Allow only local DNS proxy requests</string>
  <string name="notificationActive">Active</string>
  <string name="notificationPaused">Paused</string>
  <string name="switch_pause_resume">Tap to switch</string>
  <string name="remote_destination">Destination</string>
  <string name="passphrase">Passphrase</string>
  <string name="remoteConnectDialogTitle">Remote control</string>
  <string name="URL" translatable="false">URL</string>
  <string name="manuallyEditConfChk">Edit configuration file</string>
  <string name="ip" translatable="false">ip</string>
  <string name="port" translatable="false">port</string>
  <string name="dnsProtocol" translatable="false">DNS protocol</string>
  <string name="endpoint" translatable="false">endpoint</string>
  <string name="testDNSResultSuccess">Success:\nAverage ping ~ %1$d"</string>
  <string name="testDNSResultFailure">Failed: %1$s</string>
  <string name="ipEmptyError">IP should not be empty</string>
  <string name="portEmptyError">port should not be empty</string>
  <string name="editEntry">Edit entry</string>
  <string name="rawEditMode">Raw edit mode</string>
  <string name="serverUnreachable">Server is unreachable</string>
  <string name="showCommentedLines">Show commented lines</string>
</resources>
