<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#EFEFF0"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/dnsLabel"
            android:textColor="#424242" />

        <TextView
            android:id="@+id/dnsField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0"
            android:background="#E0E0E0"
            android:maxLength="64"
            android:padding="10dp"
            android:textColor="#424242" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.08"
            android:orientation="vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <dnsfilter.android.PaddedCheckBox
            android:id="@+id/advancedConfigCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="0dp"
            android:button="@drawable/custom_checkbox"
            android:checked="false"
            android:text="@string/EnableConfigCheckBox"
            android:textColor="#424242" />

        <dnsfilter.android.PaddedCheckBox
            android:id="@+id/editFilterLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="0dp"
            android:button="@drawable/custom_checkbox"
            android:checked="false"
            android:text="@string/editFilterLoadCheckBox"
            android:textColor="#424242" />

        <LinearLayout
            android:id="@+id/filtercfgview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="3dp"
            android:background="#E0E0E0"
            android:orientation="vertical"
            android:paddingBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:paddingRight="7dp"
                    android:text="@string/filterUpdateDays"
                    android:textColor="#424242"
                    android:textSize="14dp"/>

                <EditText
                    android:id="@+id/filterloadinterval"
                    android:layout_width="42dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#CCCCCC"
                    android:inputType="number"
                    android:text="14"
                    android:textColor="#424242"
                    android:textSize="14dp"
                    android:gravity="center"/>
            </LinearLayout>

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp">

                <TableLayout
                    android:id="@+id/filtercfgtable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="10dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".1"
                            android:paddingLeft="0dp"
                            android:text="@string/active"
                            android:textColor="#424242"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".3"
                            android:paddingLeft="10dp"
                            android:text="@string/shortText"
                            android:textColor="#424242"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".6"
                            android:paddingLeft="10dp"
                            android:text="@string/URL"
                            android:textColor="#424242"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="28dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="0"
                            android:gravity="center"
                            android:text="+/-"
                            android:textColor="#424242"
                            android:textSize="14dp"
                            android:textStyle="bold" />
                    </TableRow>
                </TableLayout>
            </ScrollView>
        </LinearLayout>

        <dnsfilter.android.PaddedCheckBox
            android:id="@+id/editAdditionalHosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="0dp"
            android:button="@drawable/custom_checkbox"
            android:checked="false"
            android:text="@string/editAdditionalHostsCheckBox"
            android:textColor="#424242" />

        <ScrollView
            android:id="@+id/addHostsScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="3dp">

            <HorizontalScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <EditText
                    android:id="@+id/additionalHostsField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:textColor="#424242"
                    android:textSize="14dp" />
            </HorizontalScrollView>
        </ScrollView>

        <dnsfilter.android.PaddedCheckBox
            android:id="@+id/appWhitelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="0dp"
            android:button="@drawable/custom_checkbox"
            android:checked="false"
            android:text="@string/appWhitelistCheckBox"
            android:textColor="#424242" />

        <ScrollView
            android:id="@+id/appWhiteListScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="3dp"
            android:background="#E0E0E0"
            android:visibility="gone">

            <dnsfilter.android.AppSelectorView
                android:id="@+id/appSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" />
        </ScrollView>

        <dnsfilter.android.PaddedCheckBox
            android:id="@+id/keepAwakeCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="0dp"
            android:button="@drawable/custom_checkbox"
            android:checked="false"
            android:text="@string/keepAwakeCheckBox"
            android:textColor="#424242" />

        <dnsfilter.android.PaddedCheckBox
            android:id="@+id/enableAddFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="0dp"
            android:button="@drawable/custom_checkbox"
            android:checked="true"
            android:text="@string/EnableAdfilter"
            android:textColor="#424242" />

        <dnsfilter.android.PaddedCheckBox
            android:id="@+id/enableAutoStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="0dp"
            android:button="@drawable/custom_checkbox"
            android:checked="true"
            android:text="@string/EnableAutoStart"
            android:textColor="#424242" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:id="@+id/filterReloadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:text="@string/filterReloadBtnLabel"
            android:textColor="#212121"
            android:textSize="14dp" />

        <Button
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:text="@string/startBtnLabel"
            android:textColor="#212121"
            android:textSize="14dp" />

        <Button
            android:id="@+id/stopBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:text="@string/stopBtnLabel"
            android:textColor="#212121"
            android:textSize="14dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/scrolllock"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="#EFEFF0"
        android:gravity="right"
        android:textColor="#000000"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="3dp"
        android:background="#E0E0E0"
        android:padding="7dp">

        <EditText
            android:id="@+id/logOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E0E0E0"
            android:fadeScrollbars="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            android:text=""
            android:textColor="#616161"
            android:textIsSelectable="true"
            android:textSize="14dp" />
    </ScrollView>
</LinearLayout>
