<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#ffffff"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/category"
                android:textColor="#424242" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/name"
                android:textColor="#424242" />

            <TextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/URL"
                android:textColor="#424242" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/filterCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="#DEE2E6"
                android:inputType="textNoSuggestions"
                android:text="blah"
                android:textColor="#424242"
                android:textSize="14dp" />


            <EditText
                android:id="@+id/filterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="#DEE2E6"
                android:inputType="textNoSuggestions"
                android:text="blah"
                android:textColor="#424242"
                android:textSize="14dp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="#DEE2E6"
                android:overScrollMode="never"
                android:scrollbars="none">

                <EditText
                    android:id="@+id/filterUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DEE2E6"
                    android:inputType="textNoSuggestions"
                    android:minWidth="200dp"
                    android:text="blah"
                    android:textColor="#424242"
                    android:textSize="14dp" />
            </HorizontalScrollView>

        </LinearLayout>

    </LinearLayout>

    <dnsfilter.android.PaddedCheckBox
        android:id="@+id/activeChk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:button="@drawable/custom_checkbox"
        android:checked="true"
        android:text="@string/active"
        android:textColor="#424242"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="#E53935"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:weightSum="1">

        <Button
            android:id="@+id/filterEditOkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/custom_round_button"
            android:drawableLeft="@drawable/done"
            android:drawableTint="#1d2733"
            android:fontFamily="sans-serif-medium"
            android:padding="5dp" />

        <Button
            android:id="@+id/filterEditCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/custom_round_button"
            android:drawableLeft="@drawable/cancel"
            android:drawableTint="#1d2733"
            android:padding="5dp" />

        <Button
            android:id="@+id/filterEditDelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/custom_round_button"
            android:drawableLeft="@drawable/ic_delete"
            android:drawableTint="#1d2733"
            android:padding="5dp" />
    </LinearLayout>

</LinearLayout>

